; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_serial.c_GetKeyPolledSerial.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_serial.c_GetKeyPolledSerial.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32 }

@packet = common dso_local global i64 0, align 8
@PACKET_TYPE_POLL = common dso_local global i32 0, align 4
@PICE_MAJOR_VERSION = common dso_local global i32 0, align 4
@PICE_MINOR_VERSION = common dso_local global i32 0, align 4
@PICE_BUILD = common dso_local global i32 0, align 4
@ucLastKeyRead = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @GetKeyPolledSerial() #0 {
  %1 = alloca i64, align 8
  %2 = alloca %struct.TYPE_2__*, align 8
  %3 = alloca i32, align 4
  %4 = load i64, i64* @packet, align 8
  %5 = inttoptr i64 %4 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %5, %struct.TYPE_2__** %2, align 8
  %6 = load i32, i32* @PACKET_TYPE_POLL, align 4
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 3
  store i32 %6, i32* %8, align 4
  %9 = load i32, i32* @PICE_MAJOR_VERSION, align 4
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 2
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* @PICE_MINOR_VERSION, align 4
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* @PICE_BUILD, align 4
  %16 = load %struct.TYPE_2__*, %struct.TYPE_2__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 4
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %2, align 8
  %19 = ptrtoint %struct.TYPE_2__* %18 to i32
  %20 = call i32 @AssemblePacket(i32 %19, i32 4)
  store i32 %20, i32* %3, align 4
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @SendPacket(i32 %21)
  %23 = load i64, i64* @ucLastKeyRead, align 8
  store i64 %23, i64* %1, align 8
  store i64 0, i64* @ucLastKeyRead, align 8
  %24 = load i64, i64* %1, align 8
  ret i64 %24
}

declare dso_local i32 @AssemblePacket(i32, i32) #1

declare dso_local i32 @SendPacket(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
